Implementacja CLI-001: CLI extract interface
- Dodano src/cli/extract.py z pełną implementacją CLI
- Argument parsing z argparse (video_file, metadata_file, --output-dir, --verbose)
- Walidacja plików wejściowych
- Obsługa błędów JSON i I/O
- Integracja z core.extractor.extract_sources
- Dodano tests/test_cli.py z 7 testami jednostkowymi
- Poprawiono konfigurację setuptools w pyproject.toml
- Entry point obs-extract działa poprawnie
- Wszystkie testy CLI przechodzą (TDD: RED -> GREEN)

Zgodne z zadaniem CLI-001 z todo.md

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,10 +43,13 @@ Repository = "https://github.com/obs-canvas-recorder/obs-canvas-recorder"
 Issues = "https://github.com/obs-canvas-recorder/obs-canvas-recorder/issues"
 
 [project.scripts]
-obs-extract = "src.cli.extract:main"
+obs-extract = "cli.extract:main"
 
 [tool.setuptools.packages.find]
 where = ["src"]
+
+[tool.setuptools.package-dir]
+"" = "src"
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
